--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -1,3 +1,6 @@
 /* This file is for your main application css. */
 
 @import "./phoenix.css";
+
+/* Import style for default CSS classes (Phoenix LiveView) */
+@import "../../deps/phoenix_live_view/assets/css/live_view.css";
