--- a/app/lib/app_web/templates/user/show.html.eex
+++ b/app/lib/app_web/templates/user/show.html.eex
@@ -3,7 +3,7 @@
 <ul>
 
   <li>
-    <strong>Net:</strong>
+    <strong>Net ID:</strong>
     <%= @user.net_id %>
   </li>
 
@@ -20,4 +20,3 @@
 </ul>
 
 <span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span>
-<span><%= link "Back", to: Routes.user_path(@conn, :index) %></span>
