--- a/app/lib/app_web/templates/page/index.html.eex
+++ b/app/lib/app_web/templates/page/index.html.eex
@@ -1,9 +1,6 @@
 <section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Yale class chat" %></h1>
+  <h1><%= gettext "Welcome to %{name}!", name: "Yale Class Chat" %></h1>
   <p>Current user = <%= @current_user %></p>
-  <p>
-    <a href="/secret">View secret page</a>
-  </p>
 </section>
 <section class="row">
   <article class="column">
@@ -12,16 +9,24 @@
 
 <section class="row">
   <article class="column">
-    <h2>Resources</h2>
+    <h2>Quick Links</h2>
     <ul>
       <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Foo Guides &amp; Docs</a>
+        <%= link "My Courses", to: Routes.course_path(@conn, :index) %>
+      </li>
+      <%= if @is_faculty do %>
+        <li>
+          <%= link "My Topics", to: Routes.topic_path(@conn, :index) %>
+        </li>
+      <% end %>
+      <li>
+        <%= link "My Submissions", to: Routes.submission_path(@conn, :index) %>
       </li>
       <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
+        <%= link "My Comments", to: Routes.comment_path(@conn, :index) %>
       </li>
       <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.4/CHANGELOG.md">v1.4 Changelog</a>
+        <%= link "My Ratings", to: Routes.rating_path(@conn, :index) %>
       </li>
     </ul>
   </article>
