Basic pages and tests working for courses and sections

--- a/app/lib/app_web/templates/section/show.html.eex
+++ b/app/lib/app_web/templates/section/show.html.eex
@@ -15,4 +15,4 @@
 </ul>
 
 <span><%= link "Edit", to: Routes.section_path(@conn, :edit, @section) %></span>
-<span><%= link "Back", to: Routes.section_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.course_section_path(@conn, :index, @section.course_id) %></span>
