--- a/app/lib/app_web/templates/layout/app.html.eex
+++ b/app/lib/app_web/templates/layout/app.html.eex
@@ -13,8 +13,11 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="/auth/cas">Log In</a></li>
-            <li><a href="/auth/cas/logout">Log Out</a></li>
+            <%= if is_nil(@conn.private.plug_session["uid"]) do %>
+                <li><a href="/auth/cas">Log In</a></li>
+            <% else %>
+              <li><a href="/auth/cas/logout">Log Out</a></li>
+            <% end %>
           </ul>
         </nav>
         <a href="/" class="phx-logo">
