--- a/app/lib/app_web/templates/section/index.html.eex
+++ b/app/lib/app_web/templates/section/index.html.eex
@@ -1,4 +1,4 @@
-<h1>Listing Sections</h1>
+<h1>Listing Sections in <%= @course.name %></h1>
 
 <table>
   <thead>
@@ -25,4 +25,4 @@
   </tbody>
 </table>
 
-<span><%= link "New Section", to: Routes.section_path(@conn, :new) %></span>
+<span><%= link "New Section", to: Routes.course_section_path(@conn, :new, @course.id) %></span>
