--- a/app/lib/app_web/templates/section/new.html.eex
+++ b/app/lib/app_web/templates/section/new.html.eex
@@ -1,5 +1,5 @@
-<h1>New Section</h1>
+<h1>New Section in <%= @course.name %></h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.section_path(@conn, :create)) %>
 
-<span><%= link "Back", to: Routes.section_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.course_section_path(@conn, :index, @course.id) %></span>
