--- a/app/lib/app_web/templates/user/show.html.eex
+++ b/app/lib/app_web/templates/user/show.html.eex
@@ -20,3 +20,4 @@
 </ul>
 
 <span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span>
+<span><%= link "Log Out", to: Routes.auth_path(@conn, :delete, @user) %></span>
