--- a/app/lib/app_web/templates/user/index.html.eex
+++ b/app/lib/app_web/templates/user/index.html.eex
@@ -1,30 +1,2 @@
-<h1>Listing Users</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Net</th>
-      <th>Display name</th>
-      <th>Email</th>
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for user <- @users do %>
-    <tr>
-      <td><%= user.net_id %></td>
-      <td><%= user.display_name %></td>
-      <td><%= user.email %></td>
-
-      <td>
-        <span><%= link "Show", to: Routes.user_path(@conn, :show, user) %></span>
-        <span><%= link "Edit", to: Routes.user_path(@conn, :edit, user) %></span>
-        <span><%= link "Delete", to: Routes.user_path(@conn, :delete, user), method: :delete, data: [confirm: "Are you sure?"] %></span>
-      </td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
-
-<span><%= link "New User", to: Routes.user_path(@conn, :new) %></span>
+<h1>You shouldn't have been able to get here!</h1>
+<p>Please let the app maintainer know</p>
