--- a/app/lib/app_web/templates/course/edit.html.eex
+++ b/app/lib/app_web/templates/course/edit.html.eex
@@ -1,4 +1,5 @@
 <h1>Edit Course</h1>
+<p>Note: semester cannot be changed once a course is created</p>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.course_path(@conn, :update, @course)) %>
 
