Add logic for sections and courses

--- a/app/lib/app_web/templates/section/edit.html.eex
+++ b/app/lib/app_web/templates/section/edit.html.eex
@@ -1,4 +1,4 @@
-<h1>Edit Section</h1>
+<h1>Edit Section in <%= @course.name %></h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.section_path(@conn, :update, @section)) %>
 
