Working on topics

--- a/app/lib/app_web/templates/section/show.html.eex
+++ b/app/lib/app_web/templates/section/show.html.eex
@@ -15,4 +15,5 @@
 </ul>
 
 <span><%= link "Edit", to: Routes.section_path(@conn, :edit, @section) %></span>
+<span><%= link "Topics", to: Routes.section_topic_path(@conn, :index, @section) %></span>
 <span><%= link "Back", to: Routes.course_section_path(@conn, :index, @section.course_id) %></span>
