Fixed bugs with Topics

--- a/app/lib/app_web/templates/topic/show.html.eex
+++ b/app/lib/app_web/templates/topic/show.html.eex
@@ -60,4 +60,4 @@
 </ul>
 
 <span><%= link "Edit", to: Routes.topic_path(@conn, :edit, @topic) %></span>
-<span><%= link "Back", to: Routes.topic_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.section_topic_path(@conn, :index, @topic.section_id) %></span>
