Added semester names to Course list for easier viewing

--- a/app/lib/app_web/templates/course/index.html.eex
+++ b/app/lib/app_web/templates/course/index.html.eex
@@ -14,7 +14,7 @@
   <tbody>
 <%= for course <- @courses do %>
     <tr>
-      <td><%= course.semester_id %></td>
+      <td><%= Map.get(@semesters, :"#{course.semester_id}") %></td>
       <td><%= course.department <> to_string(course.number) <> ": " <> course.name %></td>
       <td><%= if course.allow_read do %>Allowed<% else %>Not Allowed<% end%></td>
       <td><%= if course.allow_write do %>Allowed<% else %>Not Allowed<% end%></td>
