--- a/app/lib/app_web/templates/course/index.html.eex
+++ b/app/lib/app_web/templates/course/index.html.eex
@@ -19,7 +19,7 @@
       <td><%= if course.allow_read do %>Allowed<% else %>Not Allowed<% end%></td>
       <td><%= if course.allow_write do %>Allowed<% else %>Not Allowed<% end%></td>
       <td>
-        <span><%= link "Show", to: Routes.course_path(@conn, :show, course) %></span>
+        <span><%= link "View", to: Routes.course_path(@conn, :show, course) %></span>
         <span><%= link "Edit", to: Routes.course_path(@conn, :edit, course) %></span>
         <span><%= link "Delete", to: Routes.course_path(@conn, :delete, course), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
