--- a/app/lib/app_web/templates/section/show.html.eex
+++ b/app/lib/app_web/templates/section/show.html.eex
@@ -1,19 +1,20 @@
-<h1>Show Section</h1>
+<h1><%= @course.department %> <%= @course.number %>: <%= @course.name %></h1>
+<h1>Section <%= @section.title %></h1>
+<h2>Administration</h2>
+<section class="row">
+<article class="column"><span><%= link "Edit Section Details", to: Routes.section_path(@conn, :edit, @section) %></span></article>
+<article class="column"><span><span><%= link "Post New Topic", to: Routes.course_topic_path(@conn, :new, @section.course_id) %></span></article>
+<article class="column"><span><%= link "View Topic List", to: Routes.section_topic_path(@conn, :index, @section) %></span></article>
+<article class="column"><span><%= link "Back", to: Routes.course_section_path(@conn, :index, @section.course_id) %></span></article>
+</section>
 
-<ul>
-
-  <li>
-    <strong>Title:</strong>
-    <%= @section.title %>
-  </li>
-
-  <li>
-    <strong>Crn:</strong>
-    <%= @section.crn %>
-  </li>
-
-</ul>
-
-<span><%= link "Edit", to: Routes.section_path(@conn, :edit, @section) %></span>
-<span><%= link "Topics", to: Routes.section_topic_path(@conn, :index, @section) %></span>
-<span><%= link "Back", to: Routes.course_section_path(@conn, :index, @section.course_id) %></span>
+<h2>Topics</h2>
+<%= for topic <- @topics do %>
+      <h2><%= topic.title %></h2>
+      <span><%= topic.description %></span>
+      <section class="row">
+      <article class="column"><span><%= link "Show", to: Routes.topic_path(@conn, :show, topic) %></span></article>
+      <article class="column"><span><%= link "Edit", to: Routes.topic_path(@conn, :edit, topic) %></span></article>
+      <article class="column"><span><%= link "Delete", to: Routes.topic_path(@conn, :delete, topic), method: :delete, data: [confirm: "Are you sure?"] %></span></article>
+      </section>
+<% end %>
