--- a/app/lib/app_web/templates/submission/new.html.eex
+++ b/app/lib/app_web/templates/submission/new.html.eex
@@ -1,5 +1,5 @@
-<h1>New Submission</h1>
+<h1>New Submission to <%= @topic.title %></h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.submission_path(@conn, :create)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.topic_submission_path(@conn, :create, @topic)) %>
 
-<span><%= link "Back", to: Routes.submission_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.topic_path(@conn, :show, @topic) %></span>
