--- a/app/lib/app_web/templates/submission/edit.html.eex
+++ b/app/lib/app_web/templates/submission/edit.html.eex
@@ -2,4 +2,4 @@
 
 <%= render "form.html", Map.put(assigns, :action, Routes.submission_path(@conn, :update, @submission)) %>
 
-<span><%= link "Back", to: Routes.submission_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.submission_path(@conn, :show, @submission) %></span>
