--- a/app/lib/app_web/templates/submission/index.html.eex
+++ b/app/lib/app_web/templates/submission/index.html.eex
@@ -29,4 +29,4 @@
   </tbody>
 </table>
 
-<span><%= link "New Submission", to: Routes.submission_path(@conn, :new) %></span>
+<span><%= link "New Submission", to: Routes.topic_submission_path(@conn, :new, @topic) %></span>
