Comments now acting as intended

--- a/app/lib/app_web/templates/comment/show.html.eex
+++ b/app/lib/app_web/templates/comment/show.html.eex
@@ -15,4 +15,4 @@
 </ul>
 
 <span><%= link "Edit", to: Routes.comment_path(@conn, :edit, @comment) %></span>
-<span><%= link "Back", to: Routes.comment_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.submission_comment_path(@conn, :index, @submission) %></span>
