--- a/app/lib/app_web/templates/course__role/index.html.eex
+++ b/app/lib/app_web/templates/course__role/index.html.eex
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>User</th>
       <th>Role</th>
       <th>Valid from</th>
       <th>Valid to</th>
@@ -13,18 +14,19 @@
   <tbody>
 <%= for course__role <- @course_roles do %>
     <tr>
+      <td><%= Map.get(@user_list, :"#{course__role.user_id}") %></td>
       <td><%= course__role.role %></td>
       <td><%= course__role.valid_from %></td>
       <td><%= course__role.valid_to %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.course__role_path(@conn, :show, course__role) %></span>
-        <span><%= link "Edit", to: Routes.course__role_path(@conn, :edit, course__role) %></span>
-        <span><%= link "Delete", to: Routes.course__role_path(@conn, :delete, course__role), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        <span><%= link "Show", to: Routes.course_course__role_path(@conn, :show, course__role, @course) %></span>
+        <span><%= link "Edit", to: Routes.course_course__role_path(@conn, :edit, course__role, @course) %></span>
+        <span><%= link "Delete", to: Routes.course_course__role_path(@conn, :delete, course__role, @course), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<span><%= link "New Course  role", to: Routes.course__role_path(@conn, :new) %></span>
+<span><%= link "New Course  role", to: Routes.course_course__role_path(@conn, :new, @course) %></span>
