--- a/app/lib/app_web/templates/course__role/edit.html.eex
+++ b/app/lib/app_web/templates/course__role/edit.html.eex
@@ -1,5 +1,5 @@
 <h1>Edit Course  role</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.course__role_path(@conn, :update, @course__role)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.course_course__role_path(@conn, :update, @course__role, @course)) %>
 
-<span><%= link "Back", to: Routes.course__role_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.course_course__role_path(@conn, :index, @course) %></span>
