--- a/app/lib/app_web/templates/section__role/edit.html.eex
+++ b/app/lib/app_web/templates/section__role/edit.html.eex
@@ -1,5 +1,5 @@
 <h1>Edit Section  role</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.section__role_path(@conn, :update, @section__role)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.section_section__role_path(@conn, :update, @section, @section__role)) %>
 
-<span><%= link "Back", to: Routes.section__role_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.section_section__role_path(@conn, :index, @section) %></span>
