--- a/app/lib/app_web/templates/section__role/index.html.eex
+++ b/app/lib/app_web/templates/section__role/index.html.eex
@@ -18,13 +18,13 @@
       <td><%= section__role.valid_to %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.section__role_path(@conn, :show, section__role) %></span>
-        <span><%= link "Edit", to: Routes.section__role_path(@conn, :edit, section__role) %></span>
-        <span><%= link "Delete", to: Routes.section__role_path(@conn, :delete, section__role), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        <span><%= link "Show", to: Routes.section_section__role_path(@conn, :show, @section, section__role) %></span>
+        <span><%= link "Edit", to: Routes.section_section__role_path(@conn, :edit, @section, section__role) %></span>
+        <span><%= link "Delete", to: Routes.section_section__role_path(@conn, :delete, @section, section__role), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
-<span><%= link "New Section  role", to: Routes.section__role_path(@conn, :new) %></span>
+<span><%= link "New Section  role", to: Routes.section_section__role_path(@conn, :new, @section) %></span>
