--- a/app/lib/app_web/templates/topic/show.html.eex
+++ b/app/lib/app_web/templates/topic/show.html.eex
@@ -1,63 +1,69 @@
-<h1>Show Topic</h1>
+<h1><%= @topic.title %></h1>
+<span><%= @topic.description %></span>
+<h2>Details</h2>
+<section class="row">
+  <article class="column">
+    <ul>
 
-<ul>
+      <li>
+        <strong>Opened at:</strong>
+        <%= @topic.opened_at %>
+      </li>
 
-  <li>
-    <strong>Title:</strong>
-    <%= @topic.title %>
-  </li>
+      <li>
+        <strong>Closed at:</strong>
+        <%= @topic.closed_at %>
+      </li>
 
-  <li>
-    <strong>Description:</strong>
-    <%= @topic.description %>
-  </li>
+      <li>
+        <strong>Allow submissions:</strong>
+        <%= @topic.allow_submissions %>
+      </li>
 
-  <li>
-    <strong>Slug:</strong>
-    <%= @topic.slug %>
-  </li>
+      <li>
+        <strong>Allow submission voting:</strong>
+        <%= @topic.allow_submission_voting %>
+      </li>
+    </ul>
+  </article>
+  <article class="column">
+    <ul>
+      <li>
+        <strong>Anonymous:</strong>
+        <%= @topic.anonymous %>
+      </li>
 
-  <li>
-    <strong>Opened at:</strong>
-    <%= @topic.opened_at %>
-  </li>
+      <li>
+        <strong>Allow submission comments:</strong>
+        <%= @topic.allow_submission_comments %>
+      </li>
 
-  <li>
-    <strong>Closed at:</strong>
-    <%= @topic.closed_at %>
-  </li>
+      <li>
+        <strong>User submission limit:</strong>
+        <%= @topic.user_submission_limit %>
+      </li>
 
-  <li>
-    <strong>Allow submissions:</strong>
-    <%= @topic.allow_submissions %>
-  </li>
+      <li>
+        <strong>Sort:</strong>
+        <%= @topic.sort %>
+      </li>
 
-  <li>
-    <strong>Allow submission voting:</strong>
-    <%= @topic.allow_submission_voting %>
-  </li>
-
-  <li>
-    <strong>Anonymous:</strong>
-    <%= @topic.anonymous %>
-  </li>
-
-  <li>
-    <strong>Allow submission comments:</strong>
-    <%= @topic.allow_submission_comments %>
-  </li>
-
-  <li>
-    <strong>User submission limit:</strong>
-    <%= @topic.user_submission_limit %>
-  </li>
-
-  <li>
-    <strong>Sort:</strong>
-    <%= @topic.sort %>
-  </li>
-
-</ul>
-
-<span><%= link "Edit", to: Routes.topic_path(@conn, :edit, @topic) %></span>
-<span><%= link "Back", to: Routes.topic_path(@conn, :index) %></span>
+    </ul>
+  </article>
+</section>
+<h2>Administration</h2>
+<section class="row">
+    <article class="column"><span><%= link "Edit Topic", to: Routes.topic_path(@conn, :edit, @topic) %></span></article>
+    <article class="column"><span><%= link "Post New Submission", to: Routes.topic_submission_path(@conn, :new, @topic) %></span></article>
+    <article class="column"><span><%= link "Back", to: Routes.section_topic_path(@conn, :index, @topic.section_id) %></span></article>
+</section>
+<h2>Submissions</h2>
+<%= for submission <- @submissions do %>
+    <h2><%= submission.title %></h2>
+      <span><%= submission.description %></span>
+      <section class="row">
+      <article class="column"><span><%= link "Show", to: Routes.submission_path(@conn, :show, submission) %></span></article>
+      <article class="column"><span><%= link "Edit", to: Routes.submission_path(@conn, :edit, submission) %></span></article>
+      <article class="column"><span><%= link "Delete", to: Routes.submission_path(@conn, :delete, submission), method: :delete, data: [confirm: "Are you sure?"] %></span></article>
+    </section>
+<% end %>
