--- a/app/lib/app_web/templates/course/index.html.eex
+++ b/app/lib/app_web/templates/course/index.html.eex
@@ -3,9 +3,10 @@
 <table>
   <thead>
     <tr>
+      <th>Semester</th>
       <th>Name</th>
-      <th>Department</th>
-      <th>Number</th>
+      <th>Viewing</th>
+      <th>Participating</th>
 
       <th></th>
     </tr>
@@ -13,12 +14,12 @@
   <tbody>
 <%= for course <- @courses do %>
     <tr>
-      <td><%= course.name %></td>
-      <td><%= course.department %></td>
-      <td><%= course.number %></td>
-
+      <td><%= Map.get(@semesters, :"#{course.semester_id}") %></td>
+      <td><%= course.department <> to_string(course.number) <> ": " <> course.name %></td>
+      <td><%= if course.allow_read do %>Allowed<% else %>Not Allowed<% end%></td>
+      <td><%= if course.allow_write do %>Allowed<% else %>Not Allowed<% end%></td>
       <td>
-        <span><%= link "Show", to: Routes.course_path(@conn, :show, course) %></span>
+        <span><%= link "View", to: Routes.course_path(@conn, :show, course) %></span>
         <span><%= link "Edit", to: Routes.course_path(@conn, :edit, course) %></span>
         <span><%= link "Delete", to: Routes.course_path(@conn, :delete, course), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
