--- a/app/lib/app_web/templates/course/show.html.eex
+++ b/app/lib/app_web/templates/course/show.html.eex
@@ -1,23 +1,73 @@
-<h1>Show Course</h1>
+<h1><%= @course.department %> <%= @course.number %>: <%= @course.name %></h1>
+<section class="row">
+<article class="column">
+<h2>Course Details</h2>
 
 <ul>
-
   <li>
-    <strong>Name:</strong>
-    <%= @course.name %>
+    <strong>Student viewing:</strong>
+    <%= if @course.allow_read do %>
+      Allowed
+    <%= else %>
+      Not allowed
+    <%= end %>
   </li>
 
   <li>
-    <strong>Department:</strong>
-    <%= @course.department %>
+    <strong>Student participation:</strong>
+    <%= if @course.allow_write do %>
+      Allowed
+    <%= else %>
+      Not allowed
+    <%= end %>
   </li>
 
   <li>
-    <strong>Number:</strong>
-    <%= @course.number %>
+    <strong>Semester:</strong>
+    <%= @semester.name %>
   </li>
 
 </ul>
+</article>
 
-<span><%= link "Edit", to: Routes.course_path(@conn, :edit, @course) %></span>
-<span><%= link "Back", to: Routes.course_path(@conn, :index) %></span>
+
+<article class="column">
+<h2>Administration</h2>
+<ul>
+<li><%= link "Create Section", to: Routes.course_section_path(@conn, :new, @course) %></li>
+<li><%= link "Create Topic", to: Routes.course_topic_path(@conn, :new, @course) %></li>
+<li><%= link "Edit Course Details", to: Routes.course_path(@conn, :edit, @course) %></li>
+<li><%= link "View Course Roles", to: Routes.course_course__role_path(@conn, :index, @course) %></li>
+</ul>
+</article>
+</section>
+
+<h2>Sections in <%= @course.name %></h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Crn</th>
+
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+<%= for section <- @sections do %>
+    <tr>
+      <td><%= section.title %></td>
+      <td><%= section.crn %></td>
+
+      <td>
+        <span><%= link "Show", to: Routes.section_path(@conn, :show, section) %></span>
+        <span><%= link "Edit", to: Routes.section_path(@conn, :edit, section) %></span>
+        <span><%= link "Delete", to: Routes.section_path(@conn, :delete, section), method: :delete, data: [confirm: "Are you sure?"] %></span>
+      </td>
+    </tr>
+<% end %>
+  </tbody>
+</table>
+
+<span><%= link "Return to Course List", to: Routes.course_path(@conn, :index) %></span>
+
