--- a/app/lib/app_web/templates/user/show.html.eex
+++ b/app/lib/app_web/templates/user/show.html.eex
@@ -1,10 +1,10 @@
-<h1>Show User</h1>
+<h1>Profile</h1>
 
 <ul>
 
   <li>
-    <strong>Net:</strong>
-    <%= @user.net_id %>
+    <strong>Net ID:</strong>
+    <%= @user.net_id %> <i>(cannot be changed)</i>
   </li>
 
   <li>
@@ -20,4 +20,4 @@
 </ul>
 
 <span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span>
-<span><%= link "Back", to: Routes.user_path(@conn, :index) %></span>
+<span><%= link "Log Out", to: Routes.auth_path(@conn, :delete, @user) %></span>
