Sort now working for dates

--- a/app/lib/app_web/templates/topic/form.html.eex
+++ b/app/lib/app_web/templates/topic/form.html.eex
@@ -48,7 +48,7 @@
   <%= error_tag f, :user_submission_limit %>
 
   <%= label f, :sort %>
-  <%= text_input f, :sort %>
+  <%= select f, :sort, @sort_list %>
   <%= error_tag f, :sort %>
 
   <%= if String.starts_with?(@action, "/courses") do %>
