--- a/app/lib/app_web/templates/topic/show.html.eex
+++ b/app/lib/app_web/templates/topic/show.html.eex
@@ -60,10 +60,11 @@
 <h2>Submissions</h2>
 <%= for submission <- @submissions do %>
     <h2><%= submission.title %></h2>
+    <div class="submission-info"><span>Posted at: </span><span class="rating"><%= submission.inserted_at %><span>Average rating: </span><span class="rating"><%= submission.avg_rating |> Decimal.round(2) |> Decimal.to_string %></span></div>
       <span><%= submission.description %></span>
       <section class="row">
-      <article class="column"><span><%= link "Show", to: Routes.submission_path(@conn, :show, submission) %></span></article>
-      <article class="column"><span><%= link "Edit", to: Routes.submission_path(@conn, :edit, submission) %></span></article>
-      <article class="column"><span><%= link "Delete", to: Routes.submission_path(@conn, :delete, submission), method: :delete, data: [confirm: "Are you sure?"] %></span></article>
+      <article class="column"><span><%= link "Show", to: Routes.submission_path(@conn, :show, submission.id) %></span></article>
+      <article class="column"><span><%= link "Edit", to: Routes.submission_path(@conn, :edit, submission.id) %></span></article>
+      <article class="column"><span><%= link "Delete", to: Routes.submission_path(@conn, :delete, submission.id), method: :delete, data: [confirm: "Are you sure?"] %></span></article>
     </section>
 <% end %>
