--- a/app/lib/app_web/templates/section/index.html.eex
+++ b/app/lib/app_web/templates/section/index.html.eex
@@ -17,13 +17,17 @@
 
       <td>
         <span><%= link "Show", to: Routes.section_path(@conn, :show, section) %></span>
+        <%= if @can_edit do %>
         <span><%= link "Edit", to: Routes.section_path(@conn, :edit, section) %></span>
         <span><%= link "Delete", to: Routes.section_path(@conn, :delete, section), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        <%= end %>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
 
+<%= if @can_edit do %>
 <span><%= link "New Section", to: Routes.course_section_path(@conn, :new, @course.id) %></span>
+<%= end %>
 <span><%= link "Back", to: Routes.course_path(@conn, :show, @course) %></span>
