--- a/app/lib/app_web/templates/submission/index.html.eex
+++ b/app/lib/app_web/templates/submission/index.html.eex
@@ -21,8 +21,10 @@
 
       <td>
         <span><%= link "Show", to: Routes.submission_path(@conn, :show, submission) %></span>
+        <%= if @can_edit do %>
         <span><%= link "Edit", to: Routes.submission_path(@conn, :edit, submission) %></span>
         <span><%= link "Delete", to: Routes.submission_path(@conn, :delete, submission), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        <%= end %>
       </td>
     </tr>
 <% end %>
