--- a/app/lib/app_web/templates/section__role/index.html.eex
+++ b/app/lib/app_web/templates/section__role/index.html.eex
@@ -3,22 +3,22 @@
 <table>
   <thead>
     <tr>
+      <th>User</th>
       <th>Role</th>
       <th>Valid from</th>
       <th>Valid to</th>
-
       <th></th>
     </tr>
   </thead>
   <tbody>
 <%= for section__role <- @section_roles do %>
     <tr>
+      <td><%= Map.get(@user_list, String.to_atom(Integer.to_string(section__role.user_id))) %></td>
       <td><%= section__role.role %></td>
       <td><%= section__role.valid_from %></td>
       <td><%= section__role.valid_to %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.section_section__role_path(@conn, :show, @section, section__role) %></span>
         <span><%= link "Edit", to: Routes.section_section__role_path(@conn, :edit, @section, section__role) %></span>
         <span><%= link "Delete", to: Routes.section_section__role_path(@conn, :delete, @section, section__role), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
@@ -28,3 +28,4 @@
 </table>
 
 <span><%= link "New Section  role", to: Routes.section_section__role_path(@conn, :new, @section) %></span>
+<span><%= link "Back", to: Routes.section_path(@conn, :show, @section) %></span>
