--- a/app/lib/app_web/templates/rating/show.html.eex
+++ b/app/lib/app_web/templates/rating/show.html.eex
@@ -9,5 +9,7 @@
 
 </ul>
 
+<%= if @can_edit do %>
 <span><%= link "Edit", to: Routes.rating_path(@conn, :edit, @rating) %></span>
+<% end %>
 <span><%= link "Back", to: Routes.submission_rating_path(@conn, :index, @submission) %></span>
